# django-sqlbugdemo

./: README.md  data.json  docker-compose.yml  manage.py  pyproject.toml  query.sql
myapp/: admin.py  models.py
myapp/management/commands/: generatedata.py
myapp/migrations/: 0001_initial.py
sqlbugdemo/: asgi.py  settings.py  urls.py  wsgi.py
